fixed alignment for single card info

--- a/src/components/CountryInfoCard.css
+++ b/src/components/CountryInfoCard.css
@@ -1,6 +1,6 @@
 .country-card-info {
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	margin: 5rem 5rem 2rem 5rem;
 	height: auto;
 }
